force-app/main/default/objects/Opportunity/fields/ECP_Deal_Priority__c.field-meta.xml
<CustomField>
            <fullName>ECP_Deal_Priority__c</fullName>
            <label>Deal Priority</label>
            <description>Priority level assigned to this opportunity based on strategic importance and urgency</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Critical</fullName>
                    </value>
                    
                    <value>
                        <fullName>High</fullName>
                    </value>
                    
                    <value>
                        <fullName>Medium</fullName>
                    </value>
                    
                    <value>
                        <fullName>Low</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>