force-app/main/default/objects/Opportunity/fields/ECP_Decision_Criteria__c.field-meta.xml
<CustomField>
            <fullName>ECP_Decision_Criteria__c</fullName>
            <label>Decision Criteria</label>
            <description>Key decision factors and criteria that the customer is using to evaluate this opportunity</description>
            <type>LongTextArea</type>
            <length>32768</length>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>

        </CustomField>