force-app/main/default/objects/Opportunity/fields/ECP_Executive_Sponsor__c.field-meta.xml
<CustomField>
            <fullName>ECP_Executive_Sponsor__c</fullName>
            <label>Executive Sponsor</label>
            <description>Executive-level contact who is sponsoring or championing this opportunity</description>
            <type>Lookup</type>
            <referenceTo>Contact</referenceTo>
            <relationshipLabel>Sponsored Opportunities</relationshipLabel>
            <relationshipName>ECP_SponsoredOpportunities</relationshipName>
            <deleteConstraint>SetNull</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>