force-app/main/default/objects/Opportunity/fields/ECP_Next_Step_Date__c.field-meta.xml
<CustomField>
            <fullName>ECP_Next_Step_Date__c</fullName>
            <label>Next Step Date</label>
            <description>Scheduled date for the next action or milestone in this opportunity</description>
            <type>Date</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>