force-app/main/default/objects/Opportunity/fields/ECP_Win_Probability__c.field-meta.xml
<CustomField>
            <fullName>ECP_Win_Probability__c</fullName>
            <label>Win Probability</label>
            <description>Estimated percentage probability of winning this opportunity</description>
            <type>Percent</type>
            <precision>5</precision>
            <scale>2</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>